Fix PostgreSQL JDBC url with port and credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=security
 server.port=8080
 
-spring.datasource.url=jdbc:${DATABASE_URL}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://dpg-d5de5124d50c73f6d4fg-a.oregon-postgres.render.com:5432/jwt_db_wbu3
+spring.datasource.username=jwt_db_wbu3_user
+spring.datasource.password=CXwfR436xiirAnTEPgd1HxneXHnVtDJm
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
